--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -144,6 +144,7 @@ img {
 .hero {
   height: 180vh;
   max-width: 130rem;
+  margin: 0 auto;
   padding: 4rem;
   background-image: linear-gradient(
       330.24deg,
