--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -162,7 +162,13 @@ img {
   background-image: -webkit-image-set(url("../img/hero-big.webp") 1x)
 ) {
   .hero {
-    background-image: -webkit-image-set(url("../img/hero-big.webp") 1x);
+    background-image: linear-gradient(
+        330.24deg,
+        rgba(11, 29, 38, 0) 31.06%,
+        #0b1d26 108.93%
+      ),
+      linear-gradient(180deg, rgba(11, 29, 38, 0) 50%, #0b1d26),
+      -webkit-image-set(url("../img/hero-big.webp") 1x);
   }
 }
 
